# macasten-code-challenges

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
codinggames/: README.md
codinggames/Offset-Arrays/: README.md  offset-arrays.cpp
codinggames/There-Is-On-Spoon_Episode-1/: README.md  there-is-on-spoon_episode-1.cpp
geeksforgeeks/: README.md
geeksforgeeks/Binary-Heap-Operations/: README.md  binary-heap-operations.cpp
hackerrank/: README.md
hackerrank/practice/: README.md
hackerrank/practice/Apple-And-Orange/: README.md  apple-and-orange.cpp
hackerrank/practice/Arrays-DS/: README.md  main.cpp
hackerrank/practice/Beautiful-Days-At-The-Movies/: README.md  beautiful-days-at-the-movies.cpp
hackerrank/practice/Breaking-The-Records/: README.md  breaking-the-records.cpp
hackerrank/practice/Cats-And-a-Mouse/: README.md  main.cpp
hackerrank/practice/Climbing-The-Leaderboard/: README.md  climbing-the-leaderboard.cpp
hackerrank/practice/Counting-Valleys/: README.md  main.cpp
hackerrank/practice/Designer-PDF-Viewer/: README.md  designer-pdf-viewer.cpp
hackerrank/practice/Drawing-Book/: README.md  drawing-book.cpp
hackerrank/practice/Electronics-Shop/: README.md  electronics-shop.cpp
helper/: .gitignore  app.js  new-leetcode-challenge.js  package-lock.json  package.json
helper/models/: challenge-provider.js  config-getter.js  leetcode.js  template.js
helper/templates/: leetcode-daily-challenge.cpp  leetcode-daily-challenge.md
helper/utils/: new-leetcode-challenge.js
leetcode/: README.md
leetcode/daily-problem/: README.md
(+267 files in other folders)
